--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
+    <!-- 引入 vant 样式文件 -->
+    <link
+      rel="stylesheet"
+      href="https://fastly.jsdelivr.net/npm/vant@4/lib/index.css"
+    />
   </head>
   <body>
     <div id="app"></div>
